--- a/keitech/static/css/style.css
+++ b/keitech/static/css/style.css
@@ -225,7 +225,7 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(34, 33, 33, 0.9);
   transition: transform .3s; }
 
-.container {
+.container-newsletter {
   background-image: linear-gradient(to right bottom, rgba(34, 33, 33, 0.9), rgba(34, 33, 33, 0.9)), url("/static/img/img1.jpg");
   background-size: cover;
   padding: 10rem 4rem;
@@ -240,6 +240,7 @@ body {
   font-weight: 400; }
 
 .email-box {
+  margin-top: 4rem;
   height: 4rem;
   display: flex;
   justify-content: center; }
@@ -634,6 +635,51 @@ body {
   .row .col-3-of-4 {
     width: calc(( 3 * (100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
+.signup-section {
+  height: 100vh;
+  background-color: #f7f7f7;
+  padding: 15rem 0;
+  margin-top: -3vh;
+  margin-bottom: -34rem; }
+
+.signup-form {
+  display: grid;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 2rem;
+  text-align: left;
+  width: 40%; }
+
+.member-join {
+  background-color: #00cc66;
+  padding: 10px;
+  margin-top: 10px;
+  color: #f7f7f7;
+  border-radius: 4px;
+  font-size: 16px;
+  font-style: oblique;
+  cursor: pointer; }
+
+.form-heading {
+  position: relative;
+  margin-top: -3rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
+
+.input-style {
+  display: flex;
+  color: #777;
+  border: 2px solid #DCDCDC;
+  border-radius: 4px;
+  padding: 8px;
+  width: auto;
+  font-size: 18px;
+  background: transparent; }
+
 .section_about {
   background-color: #DCDCDC;
   padding: 25rem 0;
@@ -673,6 +719,15 @@ body {
   background-color: #222121;
   padding: 10rem;
   margin-top: 10rem;
+  background-image: linear-gradient(to right bottom, rgba(34, 33, 33, 0.95), rgba(34, 33, 33, 0.95)), url("/static/img/img1.jpg");
+  background-size: cover;
+  box-shadow: 0 2rem 2rem rgba(34, 33, 33, 0.9);
+  position: relative; }
+
+.section_footer-membership {
+  background-color: #222121;
+  padding: 10rem;
+  margin-top: 33rem;
   background-image: linear-gradient(to right bottom, rgba(34, 33, 33, 0.95), rgba(34, 33, 33, 0.95)), url("/static/img/img1.jpg");
   background-size: cover;
   box-shadow: 0 2rem 2rem rgba(34, 33, 33, 0.9);
