--- a/keitech/templates/keitech_app/contacts.html
+++ b/keitech/templates/keitech_app/contacts.html
@@ -28,7 +28,14 @@
 
   <div class="col-1-of-2">
     <h3 class="heading-tertiary">get in touch with us</h3><br>
-    <hr>
+    <hr><br>
+    <div class="form-section">
+      <form class="contactus-form" method="POST">
+        {% csrf_token %}
+        {{ contact_form.as_p }}
+        <input type="submit" class="member-join" value="Send">
+      </form>
+    </div>
   </div>
 </div>
 </div>
