--- a/keitech/templates/keitech_app/index.html
+++ b/keitech/templates/keitech_app/index.html
@@ -136,13 +136,15 @@
   </div>
 
     <div class="container-newsletter">
-      <form class="" action="index.html" method="post">
+      <form  method="POST">
         <h1>Join our Newsletter</h1>
         <p newsletter-paragraph>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat</p>
         <div class="email-box">
           <i class="fas fa-envelope"></i>
-          <input class="newsletter-input" type="email" name="" value="" placeholder="enter your email">
-          <button class="newsletter-btn" type="button" name="button">Subscribe</button>
+          <!--input class="newsletter-input" type="email" name="" value="" placeholder="enter your email"-->
+          {% csrf_token %}
+          {{ newsletterform}}
+          <button class="newsletter-btn" type="submit" name="button">Subscribe</button>
 
         </div>
       </form>
