--- a/keitech/templates/keitech_app/signup.html
+++ b/keitech/templates/keitech_app/signup.html
@@ -4,7 +4,10 @@
 <div class="">
 
   {% if registered %}
-  <h1>Thank you for registering with us</h1>
+  <div class="qanda-hero">
+    <h1 heading-primary--main>Thank you for registering with us</h1>
+  </div>
+
   {% else %}
 
   <div class="signup-section">
